[gd_scene load_steps=3 format=3 uid="uid://cege4tqidv51t"]

[ext_resource type="Script" path="res://file/json/json___container_2_json___with_class.gd" id="1_oajg4"]
[ext_resource type="PackedScene" uid="uid://cpuuwp2254hm2" path="res://addons/godot_play_tool/helper/helper_code.tscn" id="2_nv3eb"]

[node name="json___container_2_json___with_class" type="Node2D"]
script = ExtResource("1_oajg4")

[node name="Label" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 1, 0, 1)

[node name="helper_code1" parent="." instance=ExtResource("2_nv3eb")]
offset_top = 126.0
offset_right = 659.0
offset_bottom = 328.0

[node name="helper_code2" parent="." instance=ExtResource("2_nv3eb")]
offset_top = 402.0
offset_right = 659.0
offset_bottom = 604.0
delimiter_strings = Array[String](["\" \"", "' '"])
